Avery made changes to layterm injection

--- a/layterm_injection.ipynb
+++ b/layterm_injection.ipynb
@@ -690,22 +690,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "692f1d85",
+   "execution_count": 23,
+   "id": "f5b1a386",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What if we DON'T split by sentence?\n",
+    "\n",
+    "def make_lemma_doc(og_doc):\n",
+    "    doc = og_doc.split()\n",
+    "    doc = [word.lower() for word in doc]\n",
+    "    pos_doc = pos_tag(doc)\n",
+    "    lemmatizer = WordNetLemmatizer() \n",
+    "    lemmas = [(lemmatizer.lemmatize(word[0]), word[1]) for word in pos_doc]\n",
+    "    return doc, lemmas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9e6303c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WHat if we did find+replace at the same time instead of having two methods?\n",
+    "def find_and_replace(raw, lemma):\n",
+    "    \"\"\"function for matching the location in the raw doc with contents of the lemma doc at the parallel location\"\"\"\n",
+    "    for word_id in range(0, len(lemma)): # For every word in the document\n",
+    "        curr_lemma_pos = lemma[word_id] # Get the current lemma,POS pair\n",
+    "        curr_lemma = curr_lemma_pos[0] # Get the current word's lemma\n",
+    "        if curr_lemma in term_dict: # If the lemma is in the dictionary\n",
+    "            replace_options = term_dict[curr_lemma] # Get the list of replacement options\n",
+    "            for layterm_tag in replace_options: # For every layterm, POS pair in the options\n",
+    "                if curr_lemma_pos[1] == layterm_tag[1]: # If the current POS matches the layterm POS\n",
+    "                    raw[word_id] = layterm_tag[0] # Replace the word in the raw doc with the new replacement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "585618a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['our', 'genomes', 'contain', 'around', '20', ',', '000', 'different', 'genes', 'that', 'code', 'for', 'instructions', 'to', 'create', 'proteins', 'and', 'other', 'important', 'molecules', '.', 'when', 'changes', ',', 'or', 'mutations', ',', 'occur', 'within', 'these', 'genes', ',', 'malfunctioning', 'proteins', 'that', 'are', 'damaging', 'to', 'the', 'cell', 'may', 'be', 'produced', '.', 'researchers', 'of', 'human', 'genetics', 'have', 'tried', 'to', 'spot', 'the', 'genetic', 'mutations', 'that', 'are', 'associated', 'with', 'illnesses', ',', 'for', 'example', 'heart', 'diseases', '.', 'however', ',', 'they', 'found', 'that', 'most', 'of', 'these', 'mutations', 'are', 'actually', 'located', 'outside', 'of', 'genes', ',', 'in', 'the', '‘non-coding’', 'areas', 'that', 'make', 'up', 'the', 'majority', 'of', 'our', 'genome', '.', 'these', 'mutations', 'do', 'not', 'modify', 'proteins', 'directly', ',', 'which', 'makes', 'it', 'challenging', 'to', 'understand', 'how', 'they', 'may', 'be', 'related', 'to', 'heart', 'conditions', '.', 'one', 'possibility', 'is', 'that', 'the', 'genetic', 'changes', 'affect', 'regions', 'called', 'enhancers', ',', 'which', 'control', 'where', ',', 'when', 'and', 'how', 'much', 'a', 'gene', 'is', 'turned', 'on', 'by', 'physically', 'interacting', 'with', 'it', '.', 'mutations', 'in', 'enhancers', 'could', 'lead', 'to', 'a', 'gene', 'producing', 'too', 'much', 'or', 'too', 'little', 'of', 'a', 'protein', ',', 'which', 'might', 'create', 'problems', 'in', 'the', 'cell', '.', 'yet', ',', 'it', 'is', 'difficult', 'to', 'match', 'an', 'enhancer', 'with', 'the', 'gene', 'or', 'genes', 'it', 'controls', '.', 'one', 'reason', 'is', 'that', 'a', 'non-coding', 'region', 'can', 'influence', 'a', 'gene', 'placed', 'far', 'away', 'on', 'the', 'dna', 'strand', '.', 'indeed', ',', 'the', 'long', 'dna', 'molecule', 'precisely', 'folds', 'in', 'on', 'itself', 'to', 'fit', 'inside', 'its', 'compartment', 'in', 'the', 'cell', ',', 'which', 'can', 'bring', 'together', 'distant', 'sequences', '.', 'montefiori', 'et', 'al', '.', 'take', 'over', '500', 'non-coding', 'areas', ',', 'which', 'can', 'carry', 'mutations', 'associated', 'with', 'heart', 'diseases', ',', 'and', 'use', 'a', 'technique', 'called', 'hi-c', 'to', 'try', 'to', 'identify', 'which', 'genes', 'these', 'regions', 'may', 'control', '.', 'the', 'tool', 'can', 'model', 'the', '3d', 'organization', 'of', 'the', 'genome', ',', 'and', 'it', 'was', 'further', 'modified', 'to', 'capture', 'only', 'the', 'regions', 'of', 'the', 'genome', 'that', 'contain', 'genes', ',', 'and', 'the', 'dna', 'sequences', 'that', 'interact', 'with', 'them', ',', 'in', 'human', 'heart', 'cells', '.', 'this', 'helped', 'to', 'create', 'a', '3d', 'map', 'of', '347', 'genes', 'which', 'come', 'in', 'contact', 'with', 'the', 'non-coding', 'areas', 'that', 'carry', 'mutations', 'associated', 'with', 'heart', 'diseases', '.', 'in', 'fact', ',', 'deleting', 'those', 'genes', 'often', 'causes', 'heart', 'disorders', 'in', 'mice', '.', 'in', 'addition', ',', 'montefiori', 'et', 'al', '.', 'reveal', 'that', '90%', 'of', 'the', 'non-coding', 'regions', 'examined', 'were', 'influencing', 'genes', 'that', 'were', 'far', 'away', '.', 'this', 'shows', 'that', ',', 'despite', 'a', 'common', 'assumption', ',', 'enhancers', 'often', 'do', 'not', 'regulate', 'the', 'coding', 'sequences', 'they', 'are', 'nearest', 'to', 'on', 'the', 'dna', 'strand', '.', 'pinpointing', 'the', 'genes', 'regulated', 'by', 'the', 'non-coding', 'regions', 'involved', 'in', 'cardiovascular', 'diseases', 'could', 'lead', 'to', 'new', 'ways', 'of', 'treating', 'or', 'preventing', 'these', 'conditions', '.', 'the', '3d', 'map', 'created', 'by', 'montefiori', 'et', 'al', '.', 'may', 'also', 'help', 'to', 'visualize', 'how', 'the', 'genetic', 'information', 'is', 'organized', 'in', 'heart', 'cells', '.', 'this', 'will', 'contribute', 'to', 'the', 'current', 'effort', 'to', 'understand', 'the', 'role', 'of', 'the', '3d', 'structure', 'of', 'the', 'genome', ',', 'especially', 'in', 'different', 'cell', 'types', '.']\n",
+      "[[('our', 'PRP$'), ('genomes', 'NNS'), ('contain', 'VBP'), ('around', 'IN'), ('different', 'JJ'), ('genes', 'NNS'), ('that', 'WDT'), ('code', 'VBP'), ('for', 'IN'), ('instructions', 'NNS'), ('to', 'TO'), ('create', 'VB'), ('proteins', 'NNS'), ('and', 'CC'), ('other', 'JJ'), ('important', 'JJ'), ('molecules', 'NNS')], [('when', 'WRB'), ('changes', 'NNS'), ('or', 'CC'), ('mutations', 'NNS'), ('occur', 'VBP'), ('within', 'IN'), ('these', 'DT'), ('genes', 'NNS'), ('malfunctioning', 'VBG'), ('proteins', 'NNS'), ('that', 'WDT'), ('are', 'VBP'), ('damaging', 'VBG'), ('to', 'TO'), ('the', 'DT'), ('cell', 'NN'), ('may', 'MD'), ('be', 'VB'), ('produced', 'VBN')], [('researchers', 'NNS'), ('of', 'IN'), ('human', 'JJ'), ('genetics', 'NNS'), ('have', 'VBP'), ('tried', 'VBN'), ('to', 'TO'), ('spot', 'VB'), ('the', 'DT'), ('genetic', 'JJ'), ('mutations', 'NNS'), ('that', 'WDT'), ('are', 'VBP'), ('associated', 'VBN'), ('with', 'IN'), ('illnesses', 'NNS'), ('for', 'IN'), ('example', 'NN'), ('heart', 'NN'), ('diseases', 'NNS')], [('however', 'RB'), ('they', 'PRP'), ('found', 'VBP'), ('that', 'IN'), ('most', 'JJS'), ('of', 'IN'), ('these', 'DT'), ('mutations', 'NNS'), ('are', 'VBP'), ('actually', 'RB'), ('located', 'VBN'), ('outside', 'IN'), ('of', 'IN'), ('genes', 'NNS'), ('in', 'IN'), ('the', 'DT'), ('non', 'NN'), ('coding', 'VBG'), ('areas', 'NNS'), ('that', 'WDT'), ('make', 'VBP'), ('up', 'RP'), ('the', 'DT'), ('majority', 'NN'), ('of', 'IN'), ('our', 'PRP$'), ('genome', 'NN')], [('these', 'DT'), ('mutations', 'NNS'), ('do', 'VBP'), ('not', 'RB'), ('modify', 'VB'), ('proteins', 'NNS'), ('directly', 'RB'), ('which', 'WDT'), ('makes', 'VBZ'), ('it', 'PRP'), ('challenging', 'VBG'), ('to', 'TO'), ('understand', 'VB'), ('how', 'WRB'), ('they', 'PRP'), ('may', 'MD'), ('be', 'VB'), ('related', 'VBN'), ('to', 'TO'), ('heart', 'NN'), ('conditions', 'NNS')], [('one', 'CD'), ('possibility', 'NN'), ('is', 'VBZ'), ('that', 'IN'), ('the', 'DT'), ('genetic', 'JJ'), ('changes', 'NNS'), ('affect', 'VBP'), ('regions', 'NNS'), ('called', 'VBD'), ('enhancers', 'NNS'), ('which', 'WDT'), ('control', 'VBP'), ('where', 'WRB'), ('when', 'WRB'), ('and', 'CC'), ('how', 'WRB'), ('much', 'RB'), ('a', 'DT'), ('gene', 'NN'), ('is', 'VBZ'), ('turned', 'VBN'), ('on', 'IN'), ('by', 'IN'), ('physically', 'RB'), ('interacting', 'VBG'), ('with', 'IN'), ('it', 'PRP')], [('mutations', 'NNS'), ('in', 'IN'), ('enhancers', 'NNS'), ('could', 'MD'), ('lead', 'VB'), ('to', 'TO'), ('a', 'DT'), ('gene', 'NN'), ('producing', 'VBG'), ('too', 'RB'), ('much', 'JJ'), ('or', 'CC'), ('too', 'RB'), ('little', 'JJ'), ('of', 'IN'), ('a', 'DT'), ('protein', 'NN'), ('which', 'WDT'), ('might', 'MD'), ('create', 'VB'), ('problems', 'NNS'), ('in', 'IN'), ('the', 'DT'), ('cell', 'NN')], [('yet', 'RB'), ('it', 'PRP'), ('is', 'VBZ'), ('difficult', 'JJ'), ('to', 'TO'), ('match', 'VB'), ('an', 'DT'), ('enhancer', 'NN'), ('with', 'IN'), ('the', 'DT'), ('gene', 'NN'), ('or', 'CC'), ('genes', 'NNS'), ('it', 'PRP'), ('controls', 'VBZ')], [('one', 'CD'), ('reason', 'NN'), ('is', 'VBZ'), ('that', 'IN'), ('a', 'DT'), ('non', 'JJ'), ('coding', 'VBG'), ('region', 'NN'), ('can', 'MD'), ('influence', 'VB'), ('a', 'DT'), ('gene', 'NN'), ('placed', 'VBD'), ('far', 'RB'), ('away', 'RB'), ('on', 'IN'), ('the', 'DT'), ('dna', 'NN'), ('strand', 'NN')], [('indeed', 'RB'), ('the', 'DT'), ('long', 'JJ'), ('dna', 'NN'), ('molecule', 'NN'), ('precisely', 'RB'), ('folds', 'VBZ'), ('in', 'IN'), ('on', 'IN'), ('itself', 'PRP'), ('to', 'TO'), ('fit', 'VB'), ('inside', 'IN'), ('its', 'PRP$'), ('compartment', 'NN'), ('in', 'IN'), ('the', 'DT'), ('cell', 'NN'), ('which', 'WDT'), ('can', 'MD'), ('bring', 'VB'), ('together', 'RB'), ('distant', 'JJ'), ('sequences', 'NNS')], [('montefiori', 'NNS'), ('et', 'VBP'), ('al', 'NN')], [('take', 'VB'), ('over', 'RP'), ('non', 'JJ'), ('coding', 'VBG'), ('areas', 'NNS'), ('which', 'WDT'), ('can', 'MD'), ('carry', 'VB'), ('mutations', 'NNS'), ('associated', 'VBN'), ('with', 'IN'), ('heart', 'NN'), ('diseases', 'NNS'), ('and', 'CC'), ('use', 'VB'), ('a', 'DT'), ('technique', 'NN'), ('called', 'VBN'), ('hi', 'NN'), ('c', 'NN'), ('to', 'TO'), ('try', 'VB'), ('to', 'TO'), ('identify', 'VB'), ('which', 'WDT'), ('genes', 'NNS'), ('these', 'DT'), ('regions', 'NNS'), ('may', 'MD'), ('control', 'VB')], [('the', 'DT'), ('tool', 'NN'), ('can', 'MD'), ('model', 'VB'), ('the', 'DT'), ('d', 'JJ'), ('organization', 'NN'), ('of', 'IN'), ('the', 'DT'), ('genome', 'NN'), ('and', 'CC'), ('it', 'PRP'), ('was', 'VBD'), ('further', 'RBR'), ('modified', 'VBN'), ('to', 'TO'), ('capture', 'VB'), ('only', 'RB'), ('the', 'DT'), ('regions', 'NNS'), ('of', 'IN'), ('the', 'DT'), ('genome', 'NN'), ('that', 'WDT'), ('contain', 'VBP'), ('genes', 'NNS'), ('and', 'CC'), ('the', 'DT'), ('dna', 'NN'), ('sequences', 'VBZ'), ('that', 'IN'), ('interact', 'NN'), ('with', 'IN'), ('them', 'PRP'), ('in', 'IN'), ('human', 'JJ'), ('heart', 'NN'), ('cells', 'NNS')], [('this', 'DT'), ('helped', 'VBD'), ('to', 'TO'), ('create', 'VB'), ('a', 'DT'), ('d', 'JJ'), ('map', 'NN'), ('of', 'IN'), ('genes', 'NNS'), ('which', 'WDT'), ('come', 'VBP'), ('in', 'IN'), ('contact', 'NN'), ('with', 'IN'), ('the', 'DT'), ('non', 'NN'), ('coding', 'VBG'), ('areas', 'NNS'), ('that', 'WDT'), ('carry', 'VBP'), ('mutations', 'NNS'), ('associated', 'VBN'), ('with', 'IN'), ('heart', 'NN'), ('diseases', 'NNS')], [('in', 'IN'), ('fact', 'NN'), ('deleting', 'VBG'), ('those', 'DT'), ('genes', 'NNS'), ('often', 'RB'), ('causes', 'VBZ'), ('heart', 'NN'), ('disorders', 'NNS'), ('in', 'IN'), ('mice', 'NN')], [('in', 'IN'), ('addition', 'NN'), ('montefiori', 'FW'), ('et', 'FW'), ('al', 'NN')], [('reveal', 'NN'), ('that', 'IN'), ('of', 'IN'), ('the', 'DT'), ('non', 'NN'), ('coding', 'VBG'), ('regions', 'NNS'), ('examined', 'VBN'), ('were', 'VBD'), ('influencing', 'VBG'), ('genes', 'NNS'), ('that', 'WDT'), ('were', 'VBD'), ('far', 'RB'), ('away', 'RB')], [('this', 'DT'), ('shows', 'VBZ'), ('that', 'IN'), ('despite', 'IN'), ('a', 'DT'), ('common', 'JJ'), ('assumption', 'NN'), ('enhancers', 'NNS'), ('often', 'RB'), ('do', 'VBP'), ('not', 'RB'), ('regulate', 'VB'), ('the', 'DT'), ('coding', 'NN'), ('sequences', 'NNS'), ('they', 'PRP'), ('are', 'VBP'), ('nearest', 'JJS'), ('to', 'TO'), ('on', 'IN'), ('the', 'DT'), ('dna', 'NN'), ('strand', 'NN')], [('pinpointing', 'VBG'), ('the', 'DT'), ('genes', 'NNS'), ('regulated', 'VBN'), ('by', 'IN'), ('the', 'DT'), ('non', 'NN'), ('coding', 'VBG'), ('regions', 'NNS'), ('involved', 'VBN'), ('in', 'IN'), ('cardiovascular', 'JJ'), ('diseases', 'NNS'), ('could', 'MD'), ('lead', 'VB'), ('to', 'TO'), ('new', 'JJ'), ('ways', 'NNS'), ('of', 'IN'), ('treating', 'VBG'), ('or', 'CC'), ('preventing', 'VBG'), ('these', 'DT'), ('conditions', 'NNS')], [('the', 'DT'), ('d', 'NN'), ('map', 'NN'), ('created', 'VBN'), ('by', 'IN'), ('montefiori', 'JJ'), ('et', 'NNS'), ('al', 'VBP')], [('may', 'MD'), ('also', 'RB'), ('help', 'VB'), ('to', 'TO'), ('visualize', 'VB'), ('how', 'WRB'), ('the', 'DT'), ('genetic', 'JJ'), ('information', 'NN'), ('is', 'VBZ'), ('organized', 'VBN'), ('in', 'IN'), ('heart', 'NN'), ('cells', 'NNS')], [('this', 'DT'), ('will', 'MD'), ('contribute', 'VB'), ('to', 'TO'), ('the', 'DT'), ('current', 'JJ'), ('effort', 'NN'), ('to', 'TO'), ('understand', 'VB'), ('the', 'DT'), ('role', 'NN'), ('of', 'IN'), ('the', 'DT'), ('d', 'NN'), ('structure', 'NN'), ('of', 'IN'), ('the', 'DT'), ('genome', 'NN'), ('especially', 'RB'), ('in', 'IN'), ('different', 'JJ'), ('cell', 'NN'), ('types', 'NNS')]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "summ = test_summ\n",
+    "raw2, lemma = make_lemma_doc(summ) # Make raw and lemma versions of the summary\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0f5e071",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['our', 'complete sets of genetic instructions', 'contain', 'around', '20', ',', '000', 'different', 'genes', 'that', 'code', 'for', 'instructions', 'to', 'create', 'proteins', 'and', 'other', 'important', 'molecules', '.', 'when', 'changes', ',', 'or', 'mutations', ',', 'occur', 'within', 'these', 'genes', ',', 'malfunctioning', 'proteins', 'that', 'are', 'damaging', 'to', 'the', 'cell', 'may', 'be', 'produced', '.', 'researchers', 'of', 'human', 'genetics', 'have', 'tried', 'to', 'spot', 'the', 'genetic', 'mutations', 'that', 'are', 'associated', 'with', 'illnesses', ',', 'for', 'example', 'heart', 'diseases', '.', 'however', ',', 'they', 'found', 'that', 'most', 'of', 'these', 'mutations', 'are', 'actually', 'located', 'outside', 'of', 'genes', ',', 'in', 'the', '‘non-coding’', 'areas', 'that', 'make', 'up', 'the', 'majority', 'of', 'our', 'complete set of genetic instructions', '.', 'these', 'mutations', 'do', 'not', 'modify', 'proteins', 'directly', ',', 'which', 'makes', 'it', 'challenging', 'to', 'understand', 'how', 'they', 'may', 'be', 'related', 'to', 'heart', 'conditions', '.', 'one', 'possibility', 'is', 'that', 'the', 'genetic', 'changes', 'affect', 'regions', 'called', 'enhancers', ',', 'which', 'control', 'where', ',', 'when', 'and', 'how', 'much', 'a', 'gene', 'is', 'turned', 'on', 'by', 'physically', 'interacting', 'with', 'it', '.', 'mutations', 'in', 'enhancers', 'could', 'lead', 'to', 'a', 'gene', 'producing', 'too', 'much', 'or', 'too', 'little', 'of', 'a', 'protein', ',', 'which', 'might', 'create', 'problems', 'in', 'the', 'cell', '.', 'yet', ',', 'it', 'is', 'difficult', 'to', 'match', 'an', 'enhancer', 'with', 'the', 'gene', 'or', 'genes', 'it', 'controls', '.', 'one', 'reason', 'is', 'that', 'a', 'non-coding', 'region', 'can', 'influence', 'a', 'gene', 'placed', 'far', 'away', 'on', 'the', 'dna', 'strand', '.', 'indeed', ',', 'the', 'long', 'dna', 'molecule', 'precisely', 'folds', 'in', 'on', 'itself', 'to', 'fit', 'inside', 'its', 'compartment', 'in', 'the', 'cell', ',', 'which', 'can', 'bring', 'together', 'distant', 'sequences', '.', 'montefiori', 'et', 'al', '.', 'take', 'over', '500', 'non-coding', 'areas', ',', 'which', 'can', 'carry', 'mutations', 'associated', 'with', 'heart', 'diseases', ',', 'and', 'use', 'a', 'technique', 'called', 'hi-c', 'to', 'try', 'to', 'identify', 'which', 'genes', 'these', 'regions', 'may', 'control', '.', 'the', 'tool', 'can', 'model', 'the', '3d', 'organization', 'of', 'the', 'complete set of genetic instructions', ',', 'and', 'it', 'was', 'further', 'modified', 'to', 'capture', 'only', 'the', 'regions', 'of', 'the', 'complete set of genetic instructions', 'that', 'contain', 'genes', ',', 'and', 'the', 'dna', 'sequences', 'that', 'interact', 'with', 'them', ',', 'in', 'human', 'heart', 'cells', '.', 'this', 'helped', 'to', 'create', 'a', '3d', 'map', 'of', '347', 'genes', 'which', 'come', 'in', 'contact', 'with', 'the', 'non-coding', 'areas', 'that', 'carry', 'mutations', 'associated', 'with', 'heart', 'diseases', '.', 'in', 'fact', ',', 'deleting', 'those', 'genes', 'often', 'causes', 'heart', 'disorders', 'in', 'mice', '.', 'in', 'addition', ',', 'montefiori', 'et', 'al', '.', 'reveal', 'that', '90%', 'of', 'the', 'non-coding', 'regions', 'examined', 'were', 'influencing', 'genes', 'that', 'were', 'far', 'away', '.', 'this', 'shows', 'that', ',', 'despite', 'a', 'common', 'assumption', ',', 'enhancers', 'often', 'do', 'not', 'regulate', 'the', 'coding', 'sequences', 'they', 'are', 'nearest', 'to', 'on', 'the', 'dna', 'strand', '.', 'pinpointing', 'the', 'genes', 'regulated', 'by', 'the', 'non-coding', 'regions', 'involved', 'in', 'cardiovascular', 'diseases', 'could', 'lead', 'to', 'new', 'ways', 'of', 'treating', 'or', 'preventing', 'these', 'conditions', '.', 'the', '3d', 'map', 'created', 'by', 'montefiori', 'et', 'al', '.', 'may', 'also', 'help', 'to', 'visualize', 'how', 'the', 'genetic', 'information', 'is', 'organized', 'in', 'heart', 'cells', '.', 'this', 'will', 'contribute', 'to', 'the', 'current', 'effort', 'to', 'understand', 'the', 'role', 'of', 'the', '3d', 'structure', 'of', 'the', 'complete set of genetic instructions', ',', 'especially', 'in', 'different', 'cell', 'types', '.']]\n"
+     ]
+    }
+   ],
+   "source": [
     "# MAIN LOOP\n",
     "data = df_elife_train # THis is the dataframe\n",
+    "og_summ_list = df_elife_train.summary.tolist()\n",
+    "og_summ_list = [og_summ_list[28]] # For now just have one document to test with\n",
     "layterm_summaries = [] # Collect layterm summaries \n",
+    "\n",
     "for summ in og_summ_list: # For every summary in the data (currently elife_train, can be changed above)\n",
-    "    raw, lemma = create_injections(summ) # Make raw and lemma versions of the summary\n",
-    "    rep_list = find(lemma) # Find replacements\n",
-    "    new_summ = replace(rep_list, raw) # Create new summary with the replacements\n",
-    "    layterm_summaries.append(new_summ) # Add the new summary to the list\n",
+    "    raw, lemma = make_lemma_doc(summ) # Make raw and lemma versions of the summary\n",
+    "    find_and_replace(raw, lemma)\n",
+    "    layterm_summaries.append(raw) # Add the new summary to the list\n",
+    "\n",
+    "print(layterm_summaries)\n",
     "\n",
     "# Save the summaries as a new column in thedataframe\n",
-    "data['tfidf_summary'] = layterm_summaries "
+    "#data['tfidf_summary'] = layterm_summaries "
    ]
   }
  ],
