Code to format final summaries inside layterm_injection

--- a/layterm_injection.ipynb
+++ b/layterm_injection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "554e6858-1ef3-4cf3-b402-ed26572b95cc",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "e56a42af-56df-4c2f-819b-1c59ae3b2de8",
    "metadata": {},
    "outputs": [
@@ -124,12 +124,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "509aef29-39f3-474c-b7d7-0412b017a986",
    "metadata": {},
    "outputs": [],
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "c38f796f-0074-4d35-bcb1-780d28f20eea",
    "metadata": {},
    "outputs": [
@@ -260,7 +261,7 @@
        "4  Structural dynamics of myosin 5 during process...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "db14ba63-634b-48f8-a083-8af8a1e9b424",
    "metadata": {},
    "outputs": [],
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "e99d61e1-d040-4072-8c50-0c26002b3e62",
    "metadata": {},
    "outputs": [],
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "7d87c3ee-1d6f-474a-9554-45a1f9abbd96",
    "metadata": {},
    "outputs": [],
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "b723326b-1116-4379-8602-920c412b7019",
    "metadata": {},
    "outputs": [
@@ -316,7 +317,7 @@
        "'Our genome'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "f5b1a386",
    "metadata": {},
    "outputs": [],
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8e409c5d",
    "metadata": {},
    "outputs": [],
@@ -661,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3d3c3853",
    "metadata": {},
    "outputs": [],
@@ -690,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "04a757b5",
    "metadata": {},
    "outputs": [
@@ -723,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "765435fd",
    "metadata": {},
    "outputs": [
@@ -749,6 +750,77 @@
     "\n",
     "# Save the summaries as a new column in thedataframe\n",
     "#data['tfidf_summary'] = layterm_summaries "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5b89b257",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert a list of words into a well-formatted summary\n",
+    "def format_summary(og_summ):\n",
+    "    first_word = og_summ[0] # Get first word of the summary\n",
+    "    new_summ = first_word.capitalize() # Capitalize the first word\n",
+    "    for index in range(1, len(og_summ)): # For everything after the first word\n",
+    "        prev_word = og_summ[index - 1] # Get the previous word to test if it's a period\n",
+    "        curr_word = og_summ[index] # Get the current word\n",
+    "\n",
+    "        if prev_word == \".\": # If the last word is a period, capitalize the next word\n",
+    "            curr_word = curr_word.capitalize() \n",
+    "\n",
+    "        if curr_word in string.punctuation or prev_word == \"-\" or prev_word == \"/\": \n",
+    "            # If the current word is actually punctuation or prev word is a dash or slash\n",
+    "            new_summ = new_summ + curr_word # Add without space\n",
+    "        else:\n",
+    "            new_summ = new_summ + \" \" + curr_word \n",
+    "    return new_summ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c271fc7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a test/example summary. It includes: commas, periods, and punctuation-type things.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_sentence_list = [\"this\", \"is\", \"a\", \"test\", \"/\", \"example\", \"summary\", \".\", \"it\", \"includes\", \":\", \"commas\", \",\", \"periods\", \",\", \"and\", \"punctuation\", \"-\", \"type\", \"things\", \".\"]\n",
+    "\n",
+    "result_sentence = format_summary(test_sentence_list)\n",
+    "print(result_sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fafc9240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The genomes also known as genetic instructions are important for survival. Complete sets of genetic instructions help our bodies in many ways.', 'Next, we discuss complete sets of genetic instructions. The genetic instructions known as genomes help our bodies.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Try converting the layterm summaries to better format\n",
+    "final_summaries = []\n",
+    "for summ in layterm_summaries:\n",
+    "    new_summ = format_summary(summ)\n",
+    "    final_summaries.append(new_summ)\n",
+    "\n",
+    "print(final_summaries)\n"
    ]
   }
  ],
