code for med to layterm dict

--- a/project_messy.ipynb
+++ b/project_messy.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "id": "b27b53ad",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,9 @@
       "[nltk_data] Downloading package wordnet to /Users/rachel/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package omw-1.4 to /Users/rachel/nltk_data...\n",
-      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
+      "/Users/rachel/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -1743,14 +1745,6 @@
     "df_elife_train_clean['tfidf_summary'] = doc_summaries\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50b4e85d-2569-4bd3-a85e-6fad6373b3f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
