--- a/notebooks/project.ipynb
+++ b/notebooks/project.ipynb
@@ -3067,7 +3067,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "573",
    "language": "python",
    "name": "python3"
   },
@@ -3081,7 +3081,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
